# CryptoStrategies

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: auto_merge_optimization_pr.yml  auto_optimization_pr.yml  ci.yml
docs/: crypto_cross_platform_strategy_spec.md  crypto_cross_platform_strategy_spec.zh-CN.md  crypto_portability_checklist.md  crypto_portability_checklist.zh-CN.md  crypto_strategy_template.md  crypto_strategy_template.zh-CN.md
scripts/: prepare_auto_optimization_pr.py
src/crypto_strategies/: __init__.py  catalog.py  runtime_adapters.py
src/crypto_strategies/entrypoints/: __init__.py
src/crypto_strategies/manifests/: __init__.py
src/crypto_strategies/strategies/: __init__.py
src/crypto_strategies/strategies/crypto_leader_rotation/: __init__.py  core.py  rotation.py
tests/: test_auto_optimization_pr_workflow_config.py  test_catalog.py  test_contract_governance.py  test_entrypoints.py  test_prepare_auto_optimization_pr.py
